tests/suite/core/snapshots/integration__suite__core__pass_lir__snapshot_lir_basic.snap
---
source: tests/suite/core/pass_lir.rs
assertion_line: 17
expression: lir
---
LirProgram {
    functions: [
        LirFunction {
            name: "main",
            params: [],
            evidence_params: [],
            ret_type: Unit,
            requires: Row(
                [],
                None,
            ),
            effects: Row(
                [],
                None,
            ),
            body: [
                Let {
                    name: "x",
                    typ: I64,
                    expr: Atom(
                        Int(
                            42,
                        ),
                    ),
                },
            ],
            ret: Unit,
        },
    ],
    externals: [],
}
